--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 
 <body>
     <h1>Hello World!</h1>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus quos itaque quam vel excepturi ad debitis cum
+        accusantium animi soluta.</p>
+    <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
 </body>
 
 </html>
